fix: link color looks odd in dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -33,3 +33,7 @@ body {
     opacity: 1;
   }
 }
+
+*:any-link {
+  color: inherit;
+}
